--- a/intl.zh-CN/资源类型/资源类型索引.md
+++ b/intl.zh-CN/资源类型/资源类型索引.md
@@ -41,6 +41,7 @@
 -   [ALIYUN::CMS::EventRuleTargets](/intl.zh-CN/资源类型/CMS/ALIYUN::CMS::EventRuleTargets.md)：添加或者修改规则的发送目标
 -   [ALIYUN::CMS::GroupMetricRule](/intl.zh-CN/资源类型/CMS/ALIYUN::CMS::GroupMetricRule.md)：创建应用分组报警规则
 -   [ALIYUN::CMS::MetricRuleTargets](/intl.zh-CN/资源类型/CMS/ALIYUN::CMS::MetricRuleTargets.md)：添加或修改报警规则的目标
+-   [ALIYUN::CMS::MetricRuleTemplate](/intl.zh-CN/资源类型/CMS/ALIYUN::CMS::MetricRuleTemplate.md)：创建报警模板
 -   [ALIYUN::CMS::MonitoringAgentProcess](/intl.zh-CN/资源类型/CMS/ALIYUN::CMS::MonitoringAgentProcess.md)：创建进程监控
 -   [ALIYUN::CMS::MonitorGroup](/intl.zh-CN/资源类型/CMS/ALIYUN::CMS::MonitorGroup.md)：创建一个应用分组 |
 |容器服务Kubernetes版ACK（Alibaba Cloud Container Service for Kubernetes）|-   [ALIYUN::CS::AnyCluster](/intl.zh-CN/资源类型/CS/ALIYUN::CS::AnyCluster.md)：创建任意类型的Kubernetes集群实例
@@ -50,7 +51,8 @@
 -   [ALIYUN::CS::ServerlessKubernetesCluster](/intl.zh-CN/资源类型/CS/ALIYUN::CS::ServerlessKubernetesCluster.md)：创建Serverless Kubernetes集群实例 |
 |阿里云流数据处理平台DataHub|-   [ALIYUN::DATAHUB::Project](/intl.zh-CN/资源类型/DATAHUB/ALIYUN::DATAHUB::Project.md)：创建数据总线项目
 -   [ALIYUN::DATAHUB::Topic](/intl.zh-CN/资源类型/DATAHUB/ALIYUN::DATAHUB::Topic.md)：创建Topic |
-|数据管理DMS（Data Management Service）|[ALIYUN::DMS::Instance](/intl.zh-CN/资源类型/DMS/ALIYUN::DMS::Instance.md)：录入本企业新数据库实例|
+|数据管理DMS（Data Management Service）|-   [ALIYUN::DMS::Instance](/intl.zh-CN/资源类型/DMS/ALIYUN::DMS::Instance.md)：录入本企业新数据库实例
+-   [ALIYUN::DMS::User](/intl.zh-CN/资源类型/DMS/ALIYUN::DMS::User.md)：录入本企业的新用户 |
 |云解析DNS（Alibaba Cloud DNS）|-   [ALIYUN::DNS::Domain](/intl.zh-CN/资源类型/DNS/ALIYUN::DNS::Domain.md)：添加域名
 -   [ALIYUN::DNS::DomainGroup](/intl.zh-CN/资源类型/DNS/ALIYUN::DNS::DomainGroup.md)：添加域名分组
 -   [ALIYUN::DNS::DomainRecord](/intl.zh-CN/资源类型/DNS/ALIYUN::DNS::DomainRecord.md)：添加解析记录 |
@@ -182,10 +184,15 @@
 -   [ALIYUN::REDIS::Instance](/intl.zh-CN/资源类型/Redis/ALIYUN::REDIS::Instance.md)：创建云数据库Redis实例
 -   [ALIYUN::REDIS::PrepayInstance](/intl.zh-CN/资源类型/Redis/ALIYUN::REDIS::PrepayInstance.md)：创建预付费云数据库Redis版实例
 -   [ALIYUN::REDIS::Whitelist](/intl.zh-CN/资源类型/Redis/ALIYUN::REDIS::Whitelist.md)：设置Redis实例的IP白名单 |
+|阿里云资源管理（Resource Management）|-   [ALIYUN::ResourceManager::Account](/intl.zh-CN/资源类型/ResourceManager/ALIYUN::ResourceManager::Account.md)：创建资源账号类型的成员
+-   [ALIYUN::ResourceManager::Folder](/intl.zh-CN/资源类型/ResourceManager/ALIYUN::ResourceManager::Folder.md)：创建资源夹
+-   [ALIYUN::ResourceManager::Handshake](/intl.zh-CN/资源类型/ResourceManager/ALIYUN::ResourceManager::Handshake.md)：创建邀请
+-   [ALIYUN::ResourceManager::ResourceGroup](/intl.zh-CN/资源类型/ResourceManager/ALIYUN::ResourceManager::ResourceGroup.md)：创建资源组 |
 |消息队列RocketMQ版|-   [ALIYUN::ROCKETMQ::Instance](/intl.zh-CN/资源类型/ROCKETMQ/ALIYUN::ROCKETMQ::Instance.md)：创建标准版实例
 -   [ALIYUN::ROCKETMQ::Group](/intl.zh-CN/资源类型/ROCKETMQ/ALIYUN::ROCKETMQ::Group.md)：创建客户端Group ID
 -   [ALIYUN::ROCKETMQ::Topic](/intl.zh-CN/资源类型/ROCKETMQ/ALIYUN::ROCKETMQ::Topic.md)：创建Topic |
-|资源编排服务ROS（Resource Orchestration Service）|-   [ALIYUN::ROS::CustomResource](/intl.zh-CN/资源类型/ROS/ALIYUN::ROS::CustomResource.md)：创建自定义资源
+|资源编排服务ROS（Resource Orchestration Service）|-   [ALIYUN::ROS::AutoEnableService](/intl.zh-CN/资源类型/ROS/ALIYUN::ROS::AutoEnableService.md)：自动开通服务
+-   [ALIYUN::ROS::CustomResource](/intl.zh-CN/资源类型/ROS/ALIYUN::ROS::CustomResource.md)：创建自定义资源
 -   [ALIYUN::ROS::WaitCondition](/intl.zh-CN/资源类型/ROS/ALIYUN::ROS::WaitCondition.md)：创建处理UserData消息的实例
 -   [ALIYUN::ROS::WaitConditionHandle](/intl.zh-CN/资源类型/ROS/ALIYUN::ROS::WaitConditionHandle.md)：创建在UserData执行过程中发送消息和接收消息的实例
 -   [ALIYUN::ROS::Stack](/intl.zh-CN/资源类型/ROS/ALIYUN::ROS::Stack.md)：创建嵌套资源栈 |
@@ -225,6 +232,7 @@
 -   [ALIYUN::VPC::GrantInstanceToCen](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::GrantInstanceToCen.md)：为云企业网实例授权
 -   [ALIYUN::VPC::Ipv6Gateway](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::Ipv6Gateway.md)：创建IPv6网关
 -   [ALIYUN::VPC::Ipv6InternetBandwidth](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::Ipv6InternetBandwidth.md)：为IPv6地址购买公网带宽
+-   [ALIYUN::VPC::NatGateway](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::NatGateway.md)：创建NAT网关
 -   [ALIYUN::VPC::PeeringRouterInterfaceBinding](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::PeeringRouterInterfaceBinding.md)：绑定将要互联的两个路由器接口信息
 -   [ALIYUN::VPC::PeeringRouterInterfaceConnection](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::PeeringRouterInterfaceConnection.md)：发起路由器接口链接
 -   [ALIYUN::VPC::RouterInterface](/intl.zh-CN/资源类型/VPC/ALIYUN::VPC::RouterInterface.md)：创建路由器接口
