--- a/intl.zh-CN/资源类型/资源类型索引.md
+++ b/intl.zh-CN/资源类型/资源类型索引.md
@@ -51,6 +51,7 @@
 -   [ALIYUN::CS::ServerlessKubernetesCluster](/intl.zh-CN/资源类型/CS/ALIYUN::CS::ServerlessKubernetesCluster.md)：创建Serverless Kubernetes集群实例 |
 |阿里云流数据处理平台DataHub|-   [ALIYUN::DATAHUB::Project](/intl.zh-CN/资源类型/DATAHUB/ALIYUN::DATAHUB::Project.md)：创建数据总线项目
 -   [ALIYUN::DATAHUB::Topic](/intl.zh-CN/资源类型/DATAHUB/ALIYUN::DATAHUB::Topic.md)：创建Topic |
+|数据库备份DBS（Database Backup）|[ALIYUN::DBS::RestoreTask](/intl.zh-CN/资源类型/DBS/ALIYUN::DBS::RestoreTask.md)：创建数据库备份DBS（Database Backup）恢复任务|
 |数据管理DMS（Data Management Service）|-   [ALIYUN::DMS::Instance](/intl.zh-CN/资源类型/DMS/ALIYUN::DMS::Instance.md)：录入本企业新数据库实例
 -   [ALIYUN::DMS::User](/intl.zh-CN/资源类型/DMS/ALIYUN::DMS::User.md)：录入本企业的新用户 |
 |云解析DNS（Alibaba Cloud DNS）|-   [ALIYUN::DNS::Domain](/intl.zh-CN/资源类型/DNS/ALIYUN::DNS::Domain.md)：添加域名
@@ -128,6 +129,8 @@
 -   [ALIYUN::GA::Listener](/intl.zh-CN/资源类型/GA/ALIYUN::GA::Listener.md)：创建监听 |
 |云桌面（Cloud Desktop）|-   [ALIYUN::GWS::Cluster](/intl.zh-CN/资源类型/GWS/ALIYUN::GWS::Cluster.md)：创建集群
 -   [ALIYUN::GWS::Instance](/intl.zh-CN/资源类型/GWS/ALIYUN::GWS::Instance.md)：创建实例 |
+|混合云备份服务HBR（Hybrid Backup Recovery）|-   [ALIYUN::HBR::BackupClients](/intl.zh-CN/资源类型/HBR/ALIYUN::HBR::BackupClients.md)：为ECS实例安装备份客户端
+-   [ALIYUN::HBR::RestoreJob](/intl.zh-CN/资源类型/HBR/ALIYUN::HBR::RestoreJob.md)：创建恢复任务 |
 |物联网平台IoT（Internet of things）|-   [ALIYUN::IOT::Device](/intl.zh-CN/资源类型/IOT/ALIYUN::IOT::Device.md)：注册设备
 -   [ALIYUN::IOT::DeviceGroup](/intl.zh-CN/资源类型/IOT/ALIYUN::IOT::DeviceGroup.md)：创建分组
 -   [ALIYUN::IOT::Product](/intl.zh-CN/资源类型/IOT/ALIYUN::IOT::Product.md)：创建产品 |
@@ -142,6 +145,7 @@
 -   [ALIYUN::MNS::Subscription](/intl.zh-CN/资源类型/MNS/ALIYUN::MNS::Subscription.md)：描述订阅关系
 -   [ALIYUN::MNS::Topic](/intl.zh-CN/资源类型/MNS/ALIYUN::MNS::Topic.md)：创建主题 |
 |云数据库MongoDB版（ApsaraDB for MongoDB）|-   [ALIYUN::MONGODB::Instance](/intl.zh-CN/资源类型/MongoDB/ALIYUN::MONGODB::Instance.md)：创建云数据库MongoDB版实例
+-   [ALIYUN::MONGODB::ServerlessInstance](/intl.zh-CN/资源类型/MongoDB/ALIYUN::MONGODB::ServerlessInstance.md)：创建MongoDB Serverless版实例
 -   [ALIYUN::MONGODB::ShardingInstance](/intl.zh-CN/资源类型/MongoDB/ALIYUN::MONGODB::ShardingInstance.md)：创建或者克隆MongoDB分片集群实例 |
 |文件存储NAS（Network Attached Storage ）|-   [ALIYUN::NAS::AccessGroup](/intl.zh-CN/资源类型/NAS/ALIYUN::NAS::AccessGroup.md)：创建权限组
 -   [ALIYUN::NAS::AccessRule](/intl.zh-CN/资源类型/NAS/ALIYUN::NAS::AccessRule.md)：创建权限规则
@@ -174,6 +178,7 @@
 -   [ALIYUN::RAM::UserToGroupAddition](/intl.zh-CN/资源类型/RAM/ALIYUN::RAM::UserToGroupAddition.md)：添加RAM用户到用户组 |
 |阿里云关系型数据库RDS（Relational Database Service）|-   [ALIYUN::RDS::Account](/intl.zh-CN/资源类型/RDS/ALIYUN::RDS::Account.md)：创建管理数据库的账号
 -   [ALIYUN::RDS::AccountPrivilege](/intl.zh-CN/资源类型/RDS/ALIYUN::RDS::AccountPrivilege.md)：授权账号访问数据库
+-   [ALIYUN::RDS::ADInfo](/intl.zh-CN/资源类型/RDS/ALIYUN::RDS::ADInfo.md)：配置AD域服务
 -   [ALIYUN::RDS::Database](/intl.zh-CN/资源类型/RDS/ALIYUN::RDS::Database.md)：在实例下创建数据库
 -   [ALIYUN::RDS::DBInstance](/intl.zh-CN/资源类型/RDS/ALIYUN::RDS::DBInstance.md)：创建数据库实例
 -   [ALIYUN::RDS::DBInstanceParameterGroup](/intl.zh-CN/资源类型/RDS/ALIYUN::RDS::DBInstanceParameterGroup.md)：修改数据库参数列表
@@ -187,6 +192,7 @@
 |阿里云资源管理（Resource Management）|-   [ALIYUN::ResourceManager::Account](/intl.zh-CN/资源类型/ResourceManager/ALIYUN::ResourceManager::Account.md)：创建资源账号类型的成员
 -   [ALIYUN::ResourceManager::Folder](/intl.zh-CN/资源类型/ResourceManager/ALIYUN::ResourceManager::Folder.md)：创建资源夹
 -   [ALIYUN::ResourceManager::Handshake](/intl.zh-CN/资源类型/ResourceManager/ALIYUN::ResourceManager::Handshake.md)：创建邀请
+-   [ALIYUN::ResourceManager::ResourceDirectory](/intl.zh-CN/资源类型/ResourceManager/ALIYUN::ResourceManager::ResourceDirectory.md)：开通资源目录
 -   [ALIYUN::ResourceManager::ResourceGroup](/intl.zh-CN/资源类型/ResourceManager/ALIYUN::ResourceManager::ResourceGroup.md)：创建资源组 |
 |消息队列RocketMQ版|-   [ALIYUN::ROCKETMQ::Instance](/intl.zh-CN/资源类型/ROCKETMQ/ALIYUN::ROCKETMQ::Instance.md)：创建标准版实例
 -   [ALIYUN::ROCKETMQ::Group](/intl.zh-CN/资源类型/ROCKETMQ/ALIYUN::ROCKETMQ::Group.md)：创建客户端Group ID
@@ -216,12 +222,14 @@
 -   [ALIYUN::SLB::MasterSlaveServerGroup](/intl.zh-CN/资源类型/SLB/ALIYUN::SLB::MasterSlaveServerGroup.md)：创建主备服务器组
 -   [ALIYUN::SLB::Rule](/intl.zh-CN/资源类型/SLB/ALIYUN::SLB::Rule.md)：为HTTP或HTTPS监听添加转发规则
 -   [ALIYUN::SLB::VServerGroup](/intl.zh-CN/资源类型/SLB/ALIYUN::SLB::VServerGroup.md)：创建虚拟服务器组并添加后端服务器到负载均衡实例 |
-|日志服务SLS（Log Service）|-   [ALIYUN::SLS::ApplyConfigToMachineGroup](/intl.zh-CN/资源类型/SLS/ALIYUN::SLS::ApplyConfigToMachineGroup.md)：将日志服务的日志配置应用于机器组
+|日志服务SLS（Log Service）|-   [ALIYUN::SLS::Alert](/intl.zh-CN/资源类型/SLS/ALIYUN::SLS::Alert.md)：创建告警
+-   [ALIYUN::SLS::ApplyConfigToMachineGroup](/intl.zh-CN/资源类型/SLS/ALIYUN::SLS::ApplyConfigToMachineGroup.md)：将日志服务的日志配置应用于机器组
 -   [ALIYUN::SLS::Index](/intl.zh-CN/资源类型/SLS/ALIYUN::SLS::Index.md)：为指定的Logstore创建索引
 -   [ALIYUN::SLS::Logstore](/intl.zh-CN/资源类型/SLS/ALIYUN::SLS::Logstore.md)：日志项目下创建日志库
 -   [ALIYUN::SLS::MachineGroup](/intl.zh-CN/资源类型/SLS/ALIYUN::SLS::MachineGroup.md)：创建日志服务机器组
 -   [ALIYUN::SLS::Project](/intl.zh-CN/资源类型/SLS/ALIYUN::SLS::Project.md)：创建日志项目
--   [ALIYUN::SLS::LogtailConfig](/intl.zh-CN/资源类型/SLS/ALIYUN::SLS::LogtailConfig.md)：配置采集数据时的Logtail参数 |
+-   [ALIYUN::SLS::LogtailConfig](/intl.zh-CN/资源类型/SLS/ALIYUN::SLS::LogtailConfig.md)：配置采集数据时的Logtail参数
+-   [ALIYUN::SLS::Savedsearch](/intl.zh-CN/资源类型/SLS/ALIYUN::SLS::Savedsearch.md)：将查询结果保存为快速查询 |
 |极致互联网服务UIS（Ultimate Internet Service）|-   [ALIYUN::UIS::Uis](/intl.zh-CN/资源类型/UIS/ALIYUN::UIS::Uis.md)：创建UIS实例
 -   [ALIYUN::UIS::UisConnection](/intl.zh-CN/资源类型/UIS/ALIYUN::UIS::UisConnection.md)：创建隧道连接
 -   [ALIYUN::UIS::UisNode](/intl.zh-CN/资源类型/UIS/ALIYUN::UIS::UisNode.md)：为已创建的实例添加上车点实例 |
