--- a/intl.zh-CN/产品简介/什么是资源编排服务.md
+++ b/intl.zh-CN/产品简介/什么是资源编排服务.md
@@ -1,10 +1,30 @@
-# 什么是资源编排服务 {#concept_28852_zh .concept}
+# 什么是资源编排服务
 
-阿里云资源编排服务（Resource Orchestration Service 简称 ROS）是一款帮助阿里云用户简化云计算资源管理和自动化运维的服务。用户遵循 资源编排定义的模板规范，编写资源栈模板。您只需要创建一个描述自己所需的所有阿里云资源（如 ECS 实例、 RDS 数据库实例等）的模板，然后资源编排将根据模板，创建和配置这些资源。在模板中，您定义所需的云计算资源、资源间的依赖关系、资源配置等。资源编排通过编排引擎自动完成所有资源的创建和配置，以达到自动化部署、运维的目的。资源编排模板是一种用户可读、易于编写的文本文件。您可以直接编辑 JSON 格式文本，也可以使用资源编排控制台提供的可视化编辑器，更为直观地编辑模板。您可以随时编辑修改模板。通过 SVN、Git 等版本控制工具可以控制模板的版本，以达到控制基础设施版本的目的。也可以通过 API、SDK 等方式把资源编排的编排能力与自己的应用整合，做到基础设施即代码（Infrastructure as Code）。
+资源编排服务ROS（Resource Orchestration Service）是阿里云提供的一项简化云计算资源管理的服务。您可以遵循ROS定义的模板规范编写资源栈模板，在模板中定义所需的云计算资源（例如ECS实例、RDS数据库实例）、资源间的依赖关系等。ROS的编排引擎将根据模板自动完成所有资源的创建和配置，实现自动化部署及运维。
 
-资源编排模板也是一种标准化的资源和应用交付方式。如果您是独立软件供应商 \(ISV\)，您可以通过资源编排模板交付包含云资源和应用的整体系统和解决方案。ISV 可以通过这种交付方式，整合阿里云的资源和 ISV 的软件系统，达到统一交付的目的。
+![资源编排](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/6393459951/p76489.png)
 
-资源编排服务是通过资源栈 \(Stack\) 这种逻辑集合来统一管理一组云资源（一个资源栈即为一组阿里云资源），所以，对于云资源的创建、删除、克隆等操作，都可以以资源栈为单位来完成。在 DevOps 实践中，可以轻松地克隆开发、测试、线上环境。同时，也可以更容易实现应用的整体迁移和扩容。
+## 免费服务托管
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/23163/156593185944675_zh-CN.png)
+ROS提供全托管的自动化执行，即无服务器（Serverless）的自动化执行。您无需购买维护IaC模板本身执行所使用的资源，只需要关注您的业务所需要使用的资源，即模板中定义的资源。尤其当您需要创建多个项目（对应多个资源栈）时，全托管的自动化可以帮助您更快地完成任务。建议您使用Git或SVN等源代码版本管理软件同步管理模板，再通过ROS OpenAPI进行资源栈的维护。
+
+## 多账号跨地域部署
+
+您可以使用同一个ROS模板，在多个阿里云账号中跨地域的进行自动化部署。您也可以使用同一个ROS模板，部署开发、测试和生产环境，通过指定不同的参数满足各环境的差异性。例如：测试环境的ECS实例数是2台，而生产环境的ECS实例数是20台。
+
+## 标准化部署
+
+在实践中，不同环境的细微差异往往带来非常复杂的管理成本，延长了问题诊断的时间，从而影响了业务的正常运转。通过使用ROS重复部署，可以将部署环境标准化，减少不同环境的差异，将环境的配置沉淀到模板中。再通过类似代码的严格管理流程，从而保证部署的标准性。
+
+## 结果可视化呈现
+
+ROS通过自动化部署， 帮助您通过控制台或API清晰的查看部署结果， 避免人工逐个检查部署进程。
+
+## 偏差检测
+
+您可以使用偏差检测来识别在ROS之外的资源变更，并采取纠正措施，使资源再次与模板定义同步。
+
+## 服务集成
+
+通过集成访问控制（RAM）提供统一的身份认证，您无需单独建立用户认证体系。通过集成操作审计服务（ActionTrail）审查所有的运维操作，包括ROS本身。
 
