--- a/cn.zh-CN/产品简介/使用限制.md
+++ b/cn.zh-CN/产品简介/使用限制.md
@@ -19,5 +19,5 @@
 |每个更改集文件内容的最大值|2048KB|
 |每个资源栈策略文件内容的最大值|16KB|
 
-**说明：** 本文仅展示了各限制项的默认配额。对于可以调整配额的限制项，您可以前往[配额中心](https://quotas.console.aliyun.com)申请提升配额。配额中心现已支持多个云产品，请参见[配额中心支持的云产品]()。
+**说明：** 本文仅展示了各限制项的默认配额。对于可以调整配额的限制项，您可以前往[配额中心](https://quotas.console.aliyun.com/products/ros/quotas)申请提升配额。配额中心现已支持多个云产品，请参见[配额中心支持的云产品]()。
 
