--- a/intl.zh-CN/资源导入/将现有资源导入资源栈.md
+++ b/intl.zh-CN/资源导入/将现有资源导入资源栈.md
@@ -23,7 +23,7 @@
 
     **说明：** 请确保待导入资源（EIP2）与资源栈处于同一地域。
 
-4.  在资源栈列表页面，在资源栈右侧**操作**列选择**![1](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/9333649951/p77718.png)** \> **导入资源**。
+4.  在资源栈列表页面，在资源栈右侧**操作**列，选择**![1](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/9333649951/p77718.png)** \> **导入资源**。
 
 5.  在选择模板页面，将**模板录入方式**设置为**输入模板**，在**模板内容**区域修改模板，增加待导入资源，然后单击**下一步**。
 
@@ -89,7 +89,7 @@
 
 6.  在识别资源页面，输入资源标识符值（例如：`eip-bp1s1yz3aja40j377****`），单击**下一步**。
 
-    ![导入资源](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/5739667061/p195815.png)
+    ![导入资源](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/3249590161/p225582.png)
 
 7.  在配置模板参数页面，配置**资源栈名称**和**更改集名称**，单击**下一步**。
 
