--- a/intl.zh-CN/资源导入/使用现有资源创建资源栈.md
+++ b/intl.zh-CN/资源导入/使用现有资源创建资源栈.md
@@ -64,7 +64,7 @@
 
 6.  在识别资源页面，输入资源标识符值（例如：`eip-bp140qv3j25nsfaqd****`），单击**下一步**。
 
-    ![导入资源](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/0839667061/p195814.png)
+    ![资源导入](https://static-aliyun-doc.oss-accelerate.aliyuncs.com/assets/img/zh-CN/9999590161/p225585.png)
 
 7.  在配置模板参数页面，配置**资源栈名称**和**更改集名称**，单击**下一步**。
 
