--- a/cn.zh-CN/资源类型/资源类型索引.md
+++ b/cn.zh-CN/资源类型/资源类型索引.md
@@ -14,6 +14,7 @@
 -   [ALIYUN::ApiGateway::CustomDomain](/cn.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::CustomDomain.md)：为API分组创建绑定自定义域名
 -   [ALIYUN::ApiGateway::Deployment](/cn.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::Deployment.md)：发布API或快速切换API版
 -   [ALIYUN::ApiGateway::Group](/cn.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::Group.md)：创建API分组
+-   [ALIYUN::ApiGateway::Instance](/cn.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::Instance.md)：创建专享实例
 -   [ALIYUN::ApiGateway::Signature](/cn.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::Signature.md)：创建后端签名密钥
 -   [ALIYUN::ApiGateway::SignatureBinding](/cn.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::SignatureBinding.md)：绑定API与后端签名密钥
 -   [ALIYUN::ApiGateway::StageConfig](/cn.zh-CN/资源类型/API Gateway/ALIYUN::ApiGateway::StageConfig.md)：创建API分组中测试、预发、线上环境变量
@@ -23,6 +24,7 @@
 |应用实时监控服务ARMS（Application Real-Time Monitoring Service）|-   [ALIYUN::ARMS::AlertContact](/cn.zh-CN/资源类型/ARMS/ALIYUN::ARMS::AlertContact.md)：创建报警联系人
 -   [ALIYUN::ARMS::AlertContactGroup](/cn.zh-CN/资源类型/ARMS/ALIYUN::ARMS::AlertContactGroup.md)：创建报警联系人分组
 -   [ALIYUN::ARMS::RetcodeApp](/cn.zh-CN/资源类型/ARMS/ALIYUN::ARMS::RetcodeApp.md)：创建前端监控任务 |
+|阿里云服务网格ASM（Alibaba Cloud Service Mesh）|[ALIYUN::ASM::ServiceMesh](/cn.zh-CN/资源类型/ASM/ALIYUN::ASM::ServiceMesh.md)：创建服务网格实例|
 |阿里云交易和账单管理API（BSS）|[ALIYUN::BSS::WaitOrder](/cn.zh-CN/资源类型/BSS/ALIYUN::BSS::WaitOrder.md)：等待订单结束|
 |SSL证书（SSL Certificates）|[ALIYUN::CAS::Certificate](/cn.zh-CN/资源类型/CAS/ALIYUN::CAS::Certificate.md)：添加证书|
 |内容分发网络CDN（Content Delivery Network）|-   [ALIYUN::CDN::Domain](/cn.zh-CN/资源类型/CDN/ALIYUN::CDN::Domain.md)：添加加速域名
@@ -44,7 +46,8 @@
 -   [ALIYUN::CMS::MetricRuleTargets](/cn.zh-CN/资源类型/CMS/ALIYUN::CMS::MetricRuleTargets.md)：添加或修改报警规则的目标
 -   [ALIYUN::CMS::MetricRuleTemplate](/cn.zh-CN/资源类型/CMS/ALIYUN::CMS::MetricRuleTemplate.md)：创建报警模板
 -   [ALIYUN::CMS::MonitoringAgentProcess](/cn.zh-CN/资源类型/CMS/ALIYUN::CMS::MonitoringAgentProcess.md)：创建进程监控
--   [ALIYUN::CMS::MonitorGroup](/cn.zh-CN/资源类型/CMS/ALIYUN::CMS::MonitorGroup.md)：创建一个应用分组 |
+-   [ALIYUN::CMS::MonitorGroup](/cn.zh-CN/资源类型/CMS/ALIYUN::CMS::MonitorGroup.md)：创建一个应用分组
+-   [ALIYUN::CMS::SiteMonitor](/cn.zh-CN/资源类型/CMS/ALIYUN::CMS::SiteMonitor.md)：创建站点监控的监控任务 |
 |容器镜像服务ACR（Alibaba Cloud Container Registry）|-   [ALIYUN::CR::InstanceEndpointAclPolicy](/cn.zh-CN/资源类型/CR/ALIYUN::CR::InstanceEndpointAclPolicy.md)：为公网实例访问入口创建白名单策略
 -   [ALIYUN::CR::Namespace](/cn.zh-CN/资源类型/CR/ALIYUN::CR::Namespace.md)：创建一个新的命名空间
 -   [ALIYUN::CR::Repository](/cn.zh-CN/资源类型/CR/ALIYUN::CR::Repository.md)：创建一个新的仓库 |
@@ -55,12 +58,14 @@
 -   [ALIYUN::CS::ServerlessKubernetesCluster](/cn.zh-CN/资源类型/CS/ALIYUN::CS::ServerlessKubernetesCluster.md)：创建Serverless Kubernetes集群实例 |
 |阿里云流数据处理平台DataHub|-   [ALIYUN::DATAHUB::Project](/cn.zh-CN/资源类型/DATAHUB/ALIYUN::DATAHUB::Project.md)：创建数据总线项目
 -   [ALIYUN::DATAHUB::Topic](/cn.zh-CN/资源类型/DATAHUB/ALIYUN::DATAHUB::Topic.md)：创建Topic |
+|数据库备份DBS（Database Backup）|[ALIYUN::DBS::RestoreTask](/cn.zh-CN/资源类型/DBS/ALIYUN::DBS::RestoreTask.md)：创建数据库备份DBS（Database Backup）恢复任务|
 |数据管理DMS（Data Management Service）|-   [ALIYUN::DMS::Instance](/cn.zh-CN/资源类型/DMS/ALIYUN::DMS::Instance.md)：录入本企业新数据库实例
 -   [ALIYUN::DMS::User](/cn.zh-CN/资源类型/DMS/ALIYUN::DMS::User.md)：录入本企业的新用户 |
 |云解析DNS（Alibaba Cloud DNS）|-   [ALIYUN::DNS::Domain](/cn.zh-CN/资源类型/DNS/ALIYUN::DNS::Domain.md)：添加域名
 -   [ALIYUN::DNS::DomainGroup](/cn.zh-CN/资源类型/DNS/ALIYUN::DNS::DomainGroup.md)：添加域名分组
 -   [ALIYUN::DNS::DomainRecord](/cn.zh-CN/资源类型/DNS/ALIYUN::DNS::DomainRecord.md)：添加解析记录 |
-|云原生分布式数据库PolarDB-X|[ALIYUN::DRDS::DrdsInstance](/cn.zh-CN/资源类型/DRDS/ALIYUN::DRDS::DrdsInstance.md)：创建分布式关系型数据库|
+|云原生分布式数据库PolarDB-X|-   [ALIYUN::DRDS::DrdsDB](/cn.zh-CN/资源类型/DRDS/ALIYUN::DRDS::DrdsDB.md)：创建PolarDB-X云原生分布式数据库
+-   [ALIYUN::DRDS::DrdsInstance](/cn.zh-CN/资源类型/DRDS/ALIYUN::DRDS::DrdsInstance.md)：创建分布式关系型数据库 |
 |数据传输服务DTS（Data Transmission Service）|-   [ALIYUN::DTS::SynchronizationJob](/cn.zh-CN/资源类型/DTS/ALIYUN::DTS::SynchronizationJob.md)：购买同步实例、配置同步作业
 -   [ALIYUN::DTS::MigrationJob](/cn.zh-CN/资源类型/DTS/ALIYUN::DTS::MigrationJob.md)：创建、配置数据迁移任务 |
 |弹性容器实例ECI（Elastic Container Instance）|-   [ALIYUN::ECI::ContainerGroup](/cn.zh-CN/资源类型/ECI/ALIYUN::ECI::ContainerGroup.md)：创建容器组
@@ -138,12 +143,19 @@
 -   [ALIYUN::GA::Listener](/cn.zh-CN/资源类型/GA/ALIYUN::GA::Listener.md)：创建监听 |
 |云桌面（Cloud Desktop）|-   [ALIYUN::GWS::Cluster](/cn.zh-CN/资源类型/GWS/ALIYUN::GWS::Cluster.md)：创建集群
 -   [ALIYUN::GWS::Instance](/cn.zh-CN/资源类型/GWS/ALIYUN::GWS::Instance.md)：创建实例 |
+|混合云备份服务HBR（Hybrid Backup Recovery）|-   [ALIYUN::HBR::BackupClients](/cn.zh-CN/资源类型/HBR/ALIYUN::HBR::BackupClients.md)：为ECS实例安装备份客户端
+-   [ALIYUN::HBR::RestoreJob](/cn.zh-CN/资源类型/HBR/ALIYUN::HBR::RestoreJob.md)：创建恢复任务 |
 |物联网平台IoT（Internet of things）|-   [ALIYUN::IOT::Device](/cn.zh-CN/资源类型/IOT/ALIYUN::IOT::Device.md)：注册设备
 -   [ALIYUN::IOT::DeviceGroup](/cn.zh-CN/资源类型/IOT/ALIYUN::IOT::DeviceGroup.md)：创建分组
--   [ALIYUN::IOT::Product](/cn.zh-CN/资源类型/IOT/ALIYUN::IOT::Product.md)：创建产品 |
-|消息队列Kafka版|[ALIYUN::KAFKA::Topic](/cn.zh-CN/资源类型/KAFKA/ALIYUN::KAFKA::Topic.md)：创建Topic|
-|密钥管理服务KMS（Key Management Service）|-   [ALIYUN::KMS::Key](/cn.zh-CN/资源类型/KMS/ALIYUN::KMS::Key.md)：创建主密钥
--   [ALIYUN::KMS::Alias](/cn.zh-CN/资源类型/KMS/ALIYUN::KMS::Alias.md)：为主密钥创建别名 |
+-   [ALIYUN::IOT::Product](/cn.zh-CN/资源类型/IOT/ALIYUN::IOT::Product.md)：创建产品
+-   [ALIYUN::IOT::ProductTopic](/cn.zh-CN/资源类型/IOT/ALIYUN::IOT::ProductTopic.md)：为指定产品创建自定义Topic类
+-   [ALIYUN::IOT::Rule](/cn.zh-CN/资源类型/IOT/ALIYUN::IOT::Rule.md)：为指定Topic新建一个规则
+-   [ALIYUN::IOT::RuleAction](/cn.zh-CN/资源类型/IOT/ALIYUN::IOT::RuleAction.md)：在指定的规则下创建一个规则动作 |
+|消息队列Kafka版|-   [ALIYUN::KAFKA::Instance](/cn.zh-CN/资源类型/KAFKA/ALIYUN::KAFKA::Instance.md)：创建Kafka实例
+-   [ALIYUN::KAFKA::Topic](/cn.zh-CN/资源类型/KAFKA/ALIYUN::KAFKA::Topic.md)：创建Topic |
+|密钥管理服务KMS（Key Management Service）|-   [ALIYUN::KMS::Alias](/cn.zh-CN/资源类型/KMS/ALIYUN::KMS::Alias.md)：为主密钥创建别名
+-   [ALIYUN::KMS::Key](/cn.zh-CN/资源类型/KMS/ALIYUN::KMS::Key.md)：创建主密钥
+-   [ALIYUN::KMS::Secret](/cn.zh-CN/资源类型/KMS/ALIYUN::KMS::Secret.md)：创建凭据，并存入凭据的初始版本 |
 |云市场（Alibaba Cloud Marketplace）|[ALIYUN::MarketPlace::Order](/cn.zh-CN/资源类型/MarketPlace/ALIYUN::MarketPlace::Order.md)：购买云市场的资源|
 |云数据库Memcache版\( ApsaraDB for Memcache）|-   [ALIYUN::Memcache::Instance](/cn.zh-CN/资源类型/Memcache/ALIYUN::Memcache::Instance.md)：创建Memcache实例
 -   [ALIYUN::Memcache::Whitelist](/cn.zh-CN/资源类型/Memcache/ALIYUN::Memcache::Whitelist.md)：创建白名单 |
@@ -152,17 +164,20 @@
 -   [ALIYUN::MNS::Subscription](/cn.zh-CN/资源类型/MNS/ALIYUN::MNS::Subscription.md)：描述订阅关系
 -   [ALIYUN::MNS::Topic](/cn.zh-CN/资源类型/MNS/ALIYUN::MNS::Topic.md)：创建主题 |
 |云数据库MongoDB版（ApsaraDB for MongoDB）|-   [ALIYUN::MONGODB::Instance](/cn.zh-CN/资源类型/MongoDB/ALIYUN::MONGODB::Instance.md)：创建云数据库MongoDB版实例
+-   [ALIYUN::MONGODB::ServerlessInstance](/cn.zh-CN/资源类型/MongoDB/ALIYUN::MONGODB::ServerlessInstance.md)：创建MongoDB Serverless版实例
 -   [ALIYUN::MONGODB::ShardingInstance](/cn.zh-CN/资源类型/MongoDB/ALIYUN::MONGODB::ShardingInstance.md)：创建或者克隆MongoDB分片集群实例 |
 |文件存储NAS（Network Attached Storage ）|-   [ALIYUN::NAS::AccessGroup](/cn.zh-CN/资源类型/NAS/ALIYUN::NAS::AccessGroup.md)：创建权限组
 -   [ALIYUN::NAS::AccessRule](/cn.zh-CN/资源类型/NAS/ALIYUN::NAS::AccessRule.md)：创建权限规则
 -   [ALIYUN::NAS::FileSystem](/cn.zh-CN/资源类型/NAS/ALIYUN::NAS::FileSystem.md)：创建新的文件系统
 -   [ALIYUN::NAS::MountTarget](/cn.zh-CN/资源类型/NAS/ALIYUN::NAS::MountTarget.md)：创建挂载点 |
 |运维编排服务OOS（Operation Orchestration Service）|-   [ALIYUN::OOS::Execution](/cn.zh-CN/资源类型/OOS/ALIYUN::OOS::Execution.md)：启动一个执行
--   [ALIYUN::OOS::Template](/cn.zh-CN/资源类型/OOS/ALIYUN::OOS::Template.md)：创建模版 |
+-   [ALIYUN::OOS::Template](/cn.zh-CN/资源类型/OOS/ALIYUN::OOS::Template.md)：创建模版
+-   [ALIYUN::OOS::Parameter](/cn.zh-CN/资源类型/OOS/ALIYUN::OOS::Parameter.md)：创建一个普通参数 |
 |对象存储服务OSS（Object Storage Service）|[ALIYUN::OSS::Bucket](/cn.zh-CN/资源类型/OSS/ALIYUN::OSS::Bucket.md)：创建OSS存储空间|
 |表格存储（Table Store）|-   [ALIYUN::OTS::Instance](/cn.zh-CN/资源类型/OTS/ALIYUN::OTS::Instance.md)：创建表格存储实例
--   [ALIYUN::OTS::VpcBinder](/cn.zh-CN/资源类型/OTS/ALIYUN::OTS::VpcBinder.md)：将表格存储实例绑定VPC
--   [ALIYUN::OTS::Table](/cn.zh-CN/资源类型/OTS/ALIYUN::OTS::Table.md)：创建表 |
+-   [ALIYUN::OTS::SearchIndex](/cn.zh-CN/资源类型/OTS/ALIYUN::OTS::SearchIndex.md)：在数据表上创建一个多元索引
+-   [ALIYUN::OTS::Table](/cn.zh-CN/资源类型/OTS/ALIYUN::OTS::Table.md)：创建表
+-   [ALIYUN::OTS::VpcBinder](/cn.zh-CN/资源类型/OTS/ALIYUN::OTS::VpcBinder.md)：将表格存储实例绑定VPC |
 |云数据库PolarDB|-   [ALIYUN::POLARDB::Account](/cn.zh-CN/资源类型/POLARDB/ALIYUN::POLARDB::Account.md)：为POLARDB数据库创建账号
 -   [ALIYUN::POLARDB::AccountPrivilege](/cn.zh-CN/资源类型/POLARDB/ALIYUN::POLARDB::AccountPrivilege.md)：授权普通账号访问POLARDB集群的某个数据库
 -   [ALIYUN::POLARDB::DBCluster](/cn.zh-CN/资源类型/POLARDB/ALIYUN::POLARDB::DBCluster.md)：创建POLARDB集群
@@ -171,6 +186,8 @@
 -   [ALIYUN::POLARDB::DBClusterEndpointAddress](/cn.zh-CN/资源类型/POLARDB/ALIYUN::POLARDB::DBClusterEndpointAddress.md)：创建POLARDB集群的公网地址
 -   [ALIYUN::POLARDB::DBInstance](/cn.zh-CN/资源类型/POLARDB/ALIYUN::POLARDB::DBInstance.md)：在POLARDB集群下创建一个新的数据库
 -   [ALIYUN::POLARDB::DBNodes](/cn.zh-CN/资源类型/POLARDB/ALIYUN::POLARDB::DBNodes.md)：增加POLARDB集群节点 |
+|私网连接（PrivateLink）|-   [ALIYUN::PrivateLink::VpcEndpoint]()：创建终端节点
+-   [ALIYUN::PrivateLink::VpcEndpointService]()：创建终端节点服务 |
 |云解析PrivateZone|-   [ALIYUN::PVTZ::Zone](/cn.zh-CN/资源类型/PVTZ/ALIYUN::PVTZ::Zone.md)：创建PrivateZone
 -   [ALIYUN::PVTZ::ZoneRecord](/cn.zh-CN/资源类型/PVTZ/ALIYUN::PVTZ::ZoneRecord.md)：添加PrivateZone的解析记录
 -   [ALIYUN::PVTZ::ZoneVpcBinder](/cn.zh-CN/资源类型/PVTZ/ALIYUN::PVTZ::ZoneVpcBinder.md)：关联或解除Zone与VPC列表两者之间的关系 |
@@ -180,12 +197,15 @@
 -   [ALIYUN::RAM::Group](/cn.zh-CN/资源类型/RAM/ALIYUN::RAM::Group.md)：创建RAM用户组
 -   [ALIYUN::RAM::ManagedPolicy](/cn.zh-CN/资源类型/RAM/ALIYUN::RAM::ManagedPolicy.md)：创建RAM权限策略
 -   [ALIYUN::RAM::Role](/cn.zh-CN/资源类型/RAM/ALIYUN::RAM::Role.md)：创建RAM用户
+-   [ALIYUN::RAM::SAMLProvider](/cn.zh-CN/资源类型/RAM/ALIYUN::RAM::SAMLProvider.md)：创建角色SSO身份提供商
 -   [ALIYUN::RAM::User](/cn.zh-CN/资源类型/RAM/ALIYUN::RAM::User.md)：创建RAM子账号
 -   [ALIYUN::RAM::UserToGroupAddition](/cn.zh-CN/资源类型/RAM/ALIYUN::RAM::UserToGroupAddition.md)：添加RAM用户到用户组 |
 |阿里云关系型数据库RDS（Relational Database Service）|-   [ALIYUN::RDS::Account](/cn.zh-CN/资源类型/RDS/ALIYUN::RDS::Account.md)：创建管理数据库的账号
 -   [ALIYUN::RDS::AccountPrivilege](/cn.zh-CN/资源类型/RDS/ALIYUN::RDS::AccountPrivilege.md)：授权账号访问数据库
+-   [ALIYUN::RDS::ADInfo](/cn.zh-CN/资源类型/RDS/ALIYUN::RDS::ADInfo.md)：配置AD域服务
 -   [ALIYUN::RDS::Database](/cn.zh-CN/资源类型/RDS/ALIYUN::RDS::Database.md)：在实例下创建数据库
 -   [ALIYUN::RDS::DBInstance](/cn.zh-CN/资源类型/RDS/ALIYUN::RDS::DBInstance.md)：创建数据库实例
+-   [ALIYUN::RDS::DBInstanceClone](/cn.zh-CN/资源类型/RDS/ALIYUN::RDS::DBInstanceClone.md)：将历史数据恢复至一个新实例（称为克隆实例）
 -   [ALIYUN::RDS::DBInstanceParameterGroup](/cn.zh-CN/资源类型/RDS/ALIYUN::RDS::DBInstanceParameterGroup.md)：修改数据库参数列表
 -   [ALIYUN::RDS::DBInstanceSecurityIps](/cn.zh-CN/资源类型/RDS/ALIYUN::RDS::DBInstanceSecurityIps.md)：修改实例访问白名单
 -   [ALIYUN::RDS::PrepayDBInstance](/cn.zh-CN/资源类型/RDS/ALIYUN::RDS::PrepayDBInstance.md)：创建预付费数据库实例
@@ -197,6 +217,7 @@
 |阿里云资源管理（Resource Management）|-   [ALIYUN::ResourceManager::Account](/cn.zh-CN/资源类型/ResourceManager/ALIYUN::ResourceManager::Account.md)：创建资源账号类型的成员
 -   [ALIYUN::ResourceManager::Folder](/cn.zh-CN/资源类型/ResourceManager/ALIYUN::ResourceManager::Folder.md)：创建资源夹
 -   [ALIYUN::ResourceManager::Handshake](/cn.zh-CN/资源类型/ResourceManager/ALIYUN::ResourceManager::Handshake.md)：创建邀请
+-   [ALIYUN::ResourceManager::ResourceDirectory](/cn.zh-CN/资源类型/ResourceManager/ALIYUN::ResourceManager::ResourceDirectory.md)：开通资源目录
 -   [ALIYUN::ResourceManager::ResourceGroup](/cn.zh-CN/资源类型/ResourceManager/ALIYUN::ResourceManager::ResourceGroup.md)：创建资源组 |
 |消息队列RocketMQ版|-   [ALIYUN::ROCKETMQ::Instance](/cn.zh-CN/资源类型/ROCKETMQ/ALIYUN::ROCKETMQ::Instance.md)：创建标准版实例
 -   [ALIYUN::ROCKETMQ::Group](/cn.zh-CN/资源类型/ROCKETMQ/ALIYUN::ROCKETMQ::Group.md)：创建客户端Group ID
@@ -226,12 +247,15 @@
 -   [ALIYUN::SLB::MasterSlaveServerGroup](/cn.zh-CN/资源类型/SLB/ALIYUN::SLB::MasterSlaveServerGroup.md)：创建主备服务器组
 -   [ALIYUN::SLB::Rule](/cn.zh-CN/资源类型/SLB/ALIYUN::SLB::Rule.md)：为HTTP或HTTPS监听添加转发规则
 -   [ALIYUN::SLB::VServerGroup](/cn.zh-CN/资源类型/SLB/ALIYUN::SLB::VServerGroup.md)：创建虚拟服务器组并添加后端服务器到负载均衡实例 |
-|日志服务SLS（Log Service）|-   [ALIYUN::SLS::ApplyConfigToMachineGroup](/cn.zh-CN/资源类型/SLS/ALIYUN::SLS::ApplyConfigToMachineGroup.md)：将日志服务的日志配置应用于机器组
+|日志服务SLS（Log Service）|-   [ALIYUN::SLS::Alert](/cn.zh-CN/资源类型/SLS/ALIYUN::SLS::Alert.md)：创建告警
+-   [ALIYUN::SLS::ApplyConfigToMachineGroup](/cn.zh-CN/资源类型/SLS/ALIYUN::SLS::ApplyConfigToMachineGroup.md)：将日志服务的日志配置应用于机器组
 -   [ALIYUN::SLS::Index](/cn.zh-CN/资源类型/SLS/ALIYUN::SLS::Index.md)：为指定的Logstore创建索引
 -   [ALIYUN::SLS::Logstore](/cn.zh-CN/资源类型/SLS/ALIYUN::SLS::Logstore.md)：日志项目下创建日志库
 -   [ALIYUN::SLS::MachineGroup](/cn.zh-CN/资源类型/SLS/ALIYUN::SLS::MachineGroup.md)：创建日志服务机器组
 -   [ALIYUN::SLS::Project](/cn.zh-CN/资源类型/SLS/ALIYUN::SLS::Project.md)：创建日志项目
--   [ALIYUN::SLS::LogtailConfig](/cn.zh-CN/资源类型/SLS/ALIYUN::SLS::LogtailConfig.md)：配置采集数据时的Logtail参数 |
+-   [ALIYUN::SLS::LogtailConfig](/cn.zh-CN/资源类型/SLS/ALIYUN::SLS::LogtailConfig.md)：配置采集数据时的Logtail参数
+-   [ALIYUN::SLS::Savedsearch](/cn.zh-CN/资源类型/SLS/ALIYUN::SLS::Savedsearch.md)：将查询结果保存为快速查询 |
+|时序数据库TSDB（Time Series Database）|[ALIYUN::TSDB::HiTSDBInstance](/cn.zh-CN/资源类型/TSDB/ALIYUN::TSDB::HiTSDBInstance.md)：创建时序数据库实例|
 |极致互联网服务UIS（Ultimate Internet Service）|-   [ALIYUN::UIS::Uis](/cn.zh-CN/资源类型/UIS/ALIYUN::UIS::Uis.md)：创建UIS实例
 -   [ALIYUN::UIS::UisConnection](/cn.zh-CN/资源类型/UIS/ALIYUN::UIS::UisConnection.md)：创建隧道连接
 -   [ALIYUN::UIS::UisNode](/cn.zh-CN/资源类型/UIS/ALIYUN::UIS::UisNode.md)：为已创建的实例添加上车点实例 |
